--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,80 @@ main {
     background-color: darkslateblue;
 }
 
+.container {
+    position: relative;
+    width: max-content;
+    max-width: 400px;
+    margin: 10px auto;
+}
+
+.pages {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color: darkslateblue;
+    display: flex;
+    overflow: hidden;
+}
+
+
+.control__btn {
+    position: relative;
+    z-index: 1;
+    height: 100%;
+    border: none;
+    padding: 10px;
+    background-color: #5e54a0;
+    color: #fff;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+}
+
+.pages__lists {
+    position: relative;
+    list-style-type: none;
+    width: max-content;
+    height: 40px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    z-index: 0;
+}
+
+.pages__list {
+    flex-shrink: 0;
+    width: 41.5px;
+    height: 100%;
+}
+
+.pages__btn {
+    
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    background-color: #5e54a0;
+    border: 1px solid #ccc;
+    color: #fff;
+    font-size: 1rem;
+}
+
+.pages__btn.active {
+    background-color: darkslateblue;
+}
+
+.control__btn:hover, .pages__btn:hover {
+    cursor: pointer;
+}
+
+.control__btn:active, .pages__btn:active {
+    transform: scale(.9);
+}
+.next {
+    position: absolute;
+    right: 0;
+}
 @media (max-width: 922px){
     .movie {
         width: calc(100% / 3);
