--- a/styles.css
+++ b/styles.css
@@ -85,58 +85,57 @@ main {
     background-color: darkslateblue;
 }
 
+.pagination {
+    margin: 10px auto;
+    width: max-content;
+    max-width: 400px;
+}
+
 .pages {
     display: flex;
-    justify-content: space-between;
-    position: relative;
-    background-color: #fff;
     width: 100%;
-    max-width: 400px;
-    height: 40px;
-    margin: 10px auto;
-    overflow: hidden;
-    padding: 0 55px;
-}
-
-.pages__inner {
-    width: 100%;
-    height: 100%;
-    background: #666
-}
-
-.pages__con {
-    position: absolute;
-    width: 55px;
-    height: 100%;
-}
-
-.prev {
-    left: 0;
-    top: 0;
-}
-
-.next {
-    right: 0;
-    top: 0;
-}
-.pages__lists {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-wrap: nowrap;
-    width: max-content;
-    height: 100%;
+    list-style: none;
 }
 
 .pages__list {
     flex-shrink: 0;
-    width: calc(100% / 4);
-    height: 100%;
+    margin: 2px;
+    width: 34px;
+    height: 34px;
 }
 
+
+
 .pages__btn {
-    width: 100%;
-    height: 100%
+    width: 34px;
+    height: 100%;
+    border: 0;
+    font-size: 1.1rem;
+    padding: 5px;
+    background-color: #ccc;
+    color: dodgerblue;
+    border-radius: 50%;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+.pages__btn:hover {
+    position: relative;
+    overflow: visible;
+}
+.prev, .next {
+    border-radius: 3px;
+    background-color: dodgerblue;
+    color: #fff;
+    width: 45px;
+}
+.dots button {
+    font-weight: 700;
+}
+
+.pages__btn.active {
+    background-color: dodgerblue;
+    color: #fff;
 }
 @media (max-width: 922px){
     .movie {
